--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -1,5 +1,6 @@
 body {
   margin: 0px 0px;
+  min-height: 1200px;
   height: 100%;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
@@ -18,5 +19,7 @@ html {
   font-size: 20px;
   padding: 0px 100px;
   margin-top: 30px;
+  margin-bottom: 20px;
   text-align: center;
+  min-height: 1200px;
 }
